feat: update cart and viewed item responses to use ImageDTO, refactor related queries and service methods
